🐛 Fix Layout Bug due to Link Tag Addition

--- a/movie_app/src/components/styles/Movie.css
+++ b/movie_app/src/components/styles/Movie.css
@@ -3,6 +3,7 @@
 }
 
 .movie-thumnail {
+  display: block;
   position: relative;
   width: 100%;
   margin-bottom: 40px;
@@ -139,7 +140,7 @@
     position: relative;
     width: 300px;
     height: 450px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     border-radius: 20px;
   }
 
@@ -155,6 +156,11 @@
     object-fit: cover;
     transform: unset;
     border-radius: 20px;
+  }
+
+  .movie-head,
+  .movie-desc-wrap {
+    padding: 0;
   }
 
   .movie-rate-wrap {
@@ -178,5 +184,12 @@
   .movie-head .movie-title,
   .movie-basic-info {
     margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .movie-head,
+  .movie-desc-wrap {
+    padding: 0 30px;
   }
 }
